#
# EZVM Makefile.am
#
# Copyright 2012, Prologue, All rights reserved
#
# Authors:
#   Iain James Marshall <ijm667@hotmail.com>
#

bin_PROGRAMS = ezvm

ezvm_SOURCES = ezvm.c ezvm.h

ezvm_CFLAGS = $(AM_CFLAGS) $(CFLAGS_COREST) $(CFLAGS_BROKER) $(CFLAGS_OCCI) $(CFLAGS_COXML) $(CFLAGS_CORDS) $(CFLAGS_COCCI) \
              $(CFLAGS_COPABR) $(CFLAGS_PUBOCCI)
ezvm_LDFLAGS = $(LD_COPABR) $(LD_PUBOCCI) $(LD_COCCI) $(LD_OCCI) $(LD_CORDS) $(LD_COREST) $(LD_COXML) $(LDFLAGS_UUID) \
               $(LDFLAGS_SSL) $(LDFLAGS_THREADS) $(LD_BACKEND)

