#
# Manifests Makefile.am
#
# Copyright 2012, Mandriva
# All rights reserved
#
# Authors:
#   Alexandre Lissy <alissy@mandriva.com>
#

dist_coman7_DATA = accords.7 compatibleone.7

dist_coman1_DATA = accords-config.1 co-broker.1 co-command.1 co-parser.1 \
	co-resolver.1 co-start.1 co-status.1 co-stop.1 azprocci.1 broker.1 \
	coees.1 coips.1 comons.1 conagios.1 conets.1 coobas.1 cool.1 \
	copaas.1 cops.1 cosacs.1 cosacs-client.1 cosched.1 coss.1 dcprocci.1 ezvm.1 \
	fileserver.1 paasprocci.1 onprocci.1 osocciprocci.1 osprocci.1 \
	paprocci.1 parser.1 procci.1 publisher.1 run-azprocci.1 run-broker.1 \
	run-coees.1 run-coips.1 run-comons.1 run-conagios.1 run-conets.1 \
	run-coobas.1 run-cool.1 run-copaas.1 run-cops.1 run-cosacs.1 \
	run-cosched.1 run-coss.1 run-dcprocci.1 run-ezvm.1 \
	run-fileserver.1 run-paasprocci.1 run-onprocci.1 run-osocciprocci.1 \
	run-osprocci.1 run-paprocci.1 run-parser.1 run-procci.1 run-publisher.1 \
	run-slam.1 slam.1 co-check.1 co-platform.1 \
	co-provider.1 co-provision.1 testaz.1 testcb.1 testcp.1 testdc.1 teston.1 \
	testos.1 testresolver.1 accords.1

coman1dir = $(mandir)/man1/
coman7dir = $(mandir)/man7/
